@@ -1787,6 +1787,7 @@ AttackDurationSeconds=0
 
 [ScreenInputOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
+AutoMapJoysticks=&oq;ON&cq; will cause StepMania automatically create::mappings for the joysticks attached to your computer::at the time the program starts.  This will::override any manually defined mappings.
 IgnoreJoyAxes=&oq;ON&cq; will cause StepMania to ignore all input from::joystick directional pads.  This is useful for the DirectPad Pro driver::and some brands of USB convertors.
 MenuButtons=The default setting allows the dance pad's panels to navigate::the menus.  Changing this to &oq;dedicated only&cq; will restrict::menu navigation to only the Menu* set of buttons.  Be sure to map::the Menu* set of buttons before setting this to &oq;dedicated&cq;!
 AutoPlay=This option is useful for those who would like to play::without using a pad.  However, you will not be able to set::high scores or earn extra stages while this options is ON.
