@@ -31,9 +31,9 @@
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderFile="$(IntDir)/StepMania.pch"
-				AssemblerListingLocation=".\../Debug_OGL/"
-				ObjectFile=".\../Debug_OGL/"
-				ProgramDataBaseFileName=".\../Debug_OGL/"
+				AssemblerListingLocation=".\../Debug/"
+				ObjectFile=".\../Debug/"
+				ProgramDataBaseFileName=".\../Debug/"
 				BrowseInformation="0"
 				WarningLevel="4"
 				SuppressStartupBanner="TRUE"
@@ -110,9 +110,9 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="global.h"
 				PrecompiledHeaderFile="$(IntDir)/StepMania.pch"
-				AssemblerListingLocation=".\../Release_OGL/"
-				ObjectFile=".\../Release_OGL/"
-				ProgramDataBaseFileName=".\../Release_OGL/"
+				AssemblerListingLocation=".\../Release/"
+				ObjectFile=".\../Release/"
+				ProgramDataBaseFileName=".\../Release/"
 				BrowseInformation="1"
 				WarningLevel="4"
 				SuppressStartupBanner="TRUE"
